refactor consumer methods